--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="latrobesafety.mad.latrobesafety">
+    package="latrobesafety.mad.security">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -10,21 +10,25 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label= "@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <uses-library
             android:name="org.apache.http.legacy"
             android:required="false" />
-        <activity android:name=".PickUpOverview"></activity>
-        <activity android:name=".emergencyOverview" />
-        <activity android:name=".requestHistory" />
-        <activity android:name=".SecurityActiveRequest" />
-        <activity android:name=".SecurityCurrentRequests" />
+        <activity android:name="latrobesafety.mad.security.PickUpOverview"></activity>
+        <activity android:name="latrobesafety.mad.security.emergencyOverview" />
+        <activity android:name="latrobesafety.mad.security.requestHistory" />
+        <activity android:name="latrobesafety.mad.security.SecurityActiveRequest" />
+        <activity android:name="latrobesafety.mad.security.SecurityCurrentRequests" />
         <meta-data android:name="com.google.android.geo.API_KEY" android:value="@string/google_maps_key"/>
-        <activity android:name=".MapsActivity"/>
-        <activity android:name=".SecurityOverview">
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
+
+        <activity android:name="latrobesafety.mad.security.MapsActivity"/>
+        <activity android:name="latrobesafety.mad.security.SecurityOverview">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
